syntax = "proto3";

package com.service.test.api;

import "import_test.proto";
import weak "import_test.proto";
import public "second_service_import.proto";

option java_multiple_files = false;
option java_package = "com.service.test.api";
option go_package = "github.com/example/com_service_test_api";

service Test {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Set (SetRequest) returns (SetResponse){}
}

message GetRequest {
  string test = 1;
  string test1 = 2;
}

message GetResponse {
  string foo = 1;
  int32 bar = 2;
  map<string, int32> baz = 3;
}

message SetRequest {
  string key = 1;
  common.SharedMessage data = 2;
}

message SetResponse {

}